--- a/site-plan.html
+++ b/site-plan.html
@@ -128,8 +128,7 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="../portfolio1/styles/Screenshot 2023-10-28 at 3.40.59 PM.png" alt="logo">
 
       </ul>
       <h3>[Page 2]</h3>
