--- a/site-plan.html
+++ b/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="../portfolio1/styles/Screenshot 2023-10-28 at 3.40.59 PM.png" alt="Logo image">
+      <img src="../portfolio1/styles/Screenshot 2023-10-28 at 3.40.59 PM.png" alt="Logo-image">
       <hr>
       <h2>
         Style Guide
