--- a/site-plan.html
+++ b/site-plan.html
@@ -13,6 +13,7 @@
       <h1>[Favorite Food] Site Plan</h1>
       <h2>Danny Kim</h2>
       <h2>WDD 130-[2]</h2>
+      
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -31,7 +32,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="../portfolio1/styles/Screenshot 2023-10-28 at 3.40.59 PM.png" alt="Logo-image">
+      <img src="image/logo_image.jpg" alt="logo">
       <hr>
       <h2>
         Style Guide
@@ -87,9 +88,11 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <nav>
+          <a href="mainpage.html">Home</a>
+          <a href="Dining-Discoveries.html">Dining Discoveries</a>
+          <a href="Sightseeing-Adventures.html">Sightseeing-Adventures</a>
+        </nav>
       </nav>
       <hr>
       <h2>
@@ -100,10 +103,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Dining Discoveries <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Sightseeing Adentures  <!-- change this -->
         </div>
 
         <div class="top">
@@ -123,31 +126,31 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Eatstar Dining</h3>
       <p>
-        [Written copy for the home page here]
+        [This webpage is your ultimate destination for all things related to dining and sightseeing. Whether you're a food enthusiast in search of the best restaurants in town or a traveler looking for insights on famous tourist attractions, our website has been designed with your needs in mind. With a user-friendly interface and a wealth of valuable content, we aim to be your go-to resource for planning your culinary adventures and sightseeing escapades. Explore comprehensive restaurant reviews, discover local insights, and get insider tips on must-visit attractions, all while contributing to our vibrant community of food and travel enthusiasts. This webpage is committed to providing you with the most up-to-date and authentic information, ensuring that your experiences are unforgettable.]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="image/main1.png" alt="image for homepage">
+        <img src="image/main2.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Dining Discoveries]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Visitors are drawn to "Dining Discoveries" on Eatstar Dining for its role as the ultimate culinary resource, offering a platform where food enthusiasts can explore a curated collection of restaurant reviews and rankings, ensuring they discover the best dining experiences. With answers to questions about top restaurants, recommended dishes, and ratings, users engage in activities like browsing reviews, contributing their insights, accessing rankings, and interacting with a passionate community. To facilitate these actions, we provide necessary restaurant information and user profiles, emphasizing user-generated content for authenticity. Eatstar Dining distinguishes itself by offering an all-in-one destination, user engagement, local insights, regular updates, and a user-friendly interface, ensuring that visitors turn to us for their dining needs over other platforms.]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="image/dining.png" alt="image for dining">
+        <img src="image/dining2.png" alt="image for dining">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[Sightseeing Adventures]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        ["Sightseeing Adventures" is the ideal hub for travelers and adventurers seeking to explore the world's most famous tourist attractions. Our platform offers a comprehensive guide to these iconic landmarks, providing travelers with invaluable insights to plan their journeys effectively. Users can discover essential details about these attractions, such as location, operating hours, admission fees, and glean insider tips to maximize their visits. What sets us apart is the active engagement of our user community, who share their experiences through reviews and interactions, enriching our platform with diverse perspectives. Whether you're planning a solo adventure or a family vacation, "Sightseeing Adventures" on Eatstar Dining is your ultimate resource, offering an all-in-one solution for both dining and sightseeing needs, local insights, regular updates, and a user-friendly interface, ensuring your adventures are nothing short of memorable.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="image/sightseeing1.png" alt="image for sightseeing">
+        <img src="image/sightseeing2.png" alt="image for sightseeing">
 
       </ul>
       <hr>
