--- a/site-plan.html
+++ b/site-plan.html
@@ -162,21 +162,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [Eatstar's main page welcomes users with a stylish design that features a logo and an intuitive navigation bar. The highlight is the Quick Review section, which introduces the most popular restaurants. Not only do the most popular restaurant cards include names and average ratings, but they also provide a tantalizing display of some of the best comments. Footer is consistent and features contact information with the About Us section and social media links for further interaction.]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img class = "wireframe" src="image/mainwireframe.png" alt="Eatstar">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        [On the Dining Discovery page, the design is well combined with the main page. Users are invited to explore grid layouts featuring Dining Discovery, each with a representative photo, one popular comment, and a location. Click Midge to encourage users to explore the detail pages for each discovery. The footer mirroring the main page contains contact information for the About Us section and social media links.]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img class = "wireframe" src="image/page2.png" alt="Dining Discoveries">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Eatstar's tourism page provides a visual feast for users with a consistent header design. It shows amazing images of famous tourist attractions accompanied by each brief description. It serves as a guide to users to explore the surrounding attractions and emphasize the beauty of each tourist attraction. The dedicated review section allows users to read and share their thoughts about attractions, cultivating an attractive community experience. Footer reflects Eatstar's commitment to the joys of cooking and exploring in contact information, including About Us sections and social media links.]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img class = "wireframe" src="image/page3.png" alt="Sightseeing Adventures">
     </main>
   </body>
 
