--- a/site-plan.html
+++ b/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>[Favorite Food] Site Plan</h1>
+      <h1>[Eatstar] Site Plan</h1>
       <h2>Danny Kim</h2>
       <h2>WDD 130-[2]</h2>
       
