--- a/site-plan.html
+++ b/site-plan.html
@@ -89,7 +89,7 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <nav>
-          <a href="mainpage.html">Home</a>
+          <a href="main.html">Home</a>
           <a href="Dining-Discoveries.html">Dining Discoveries</a>
           <a href="Sightseeing-Adventures.html">Sightseeing-Adventures</a>
         </nav>
