--- a/dining.html
+++ b/dining.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/styles.css">
+  <title>Eatstar</title>
 </head>
 <body>
-    
+  <div id="content">
+    <header>
+      <a id="logo_link" href="index.html">
+        <img class="logo" src="image/logo_image.png" alt="Eatstar">
+      </a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="dining.html">Dining Discoveries</a>
+          <a href="sightseeing.html">Sightseeing-Adventures</a>
+      </nav>
+    </header>
+    <div id="hero">
+      <div id="hero-box">
+          <img id="hero-img" src="image/dining-banner.png" alt="Explore and Review the Best Restaurants">
+      </div>
+      <section id="hero-msg-dining">
+          <h1 class="home-title-dining">Dining Discovery</h1>
+          <h2>Explore and Review the Best Restaurants</h2>
+      </section>
+  </div>
+  <main class="home-grid-dining">
+    <section class="banner-one">
+        <img class="card-img" src="image/banner1.png" alt="restaurant1">
+        <h2>Denny's</h2>
+    </section>
+    <section class="banner-two">
+        <img class="card-img" src="image/banner2.png"  alt="restaurant2">
+        <h2>Daily Queen</h2>
+    </section>
+    <section class="banner-three">
+        <img class="card-img" src="image/banner3.png" alt="restaurant3">
+        <h2>Fresco kitchen & Grill</h2>
+    </section>
+    <div class="map-frame">
+        <h1>Google map</h1>
+        <div class="map-content">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2877.8510810288585!2d-111.78185322362928!3d43.83818564044657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53540b61aa6143e7%3A0x2734c5a604d49798!2sDenny&#39;s!5e0!3m2!1sen!2sus!4v1700331880625!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</main>
+
+  </div>
+  <footer>
+        <p>Eatstar &copy; 2023 - Danny Kim</p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="image/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="image/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="image/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+  </footer>
 </body>
 </html>
