--- a/site-plan.html
+++ b/site-plan.html
@@ -63,10 +63,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Lato]  <!-- change this -->
+        Heading Font: [Rubik]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Montserrat]  <!-- change this -->
+        Paragraph Font: [Dosis]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -89,9 +89,9 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <nav>
-          <a href="main.html">Home</a>
-          <a href="Dining-Discoveries.html">Dining Discoveries</a>
-          <a href="Sightseeing-Adventures.html">Sightseeing-Adventures</a>
+          <a href="index.html">Home</a>
+          <a href="dining.html">Dining Discoveries</a>
+          <a href="sightseeing.html">Sightseeing-Adventures</a>
         </nav>
       </nav>
       <hr>
