--- a/sightseeing.html
+++ b/sightseeing.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/styles.css">
+  <title>Eatstar</title>
 </head>
 <body>
+  <div id="content">
+    <header>
+      <a id="logo_link" href="index.html">
+        <img class="logo" src="image/logo_image.png" alt="Eatstar">
+      </a>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="dining.html">Dining Discoveries</a>
+          <a href="sightseeing.html">Sightseeing-Adventures</a>
+      </nav>
+    </header>
+    <div id="hero">
+      <div id="hero-box">
+          <img id="hero-img" src="image/sight-banner.png" alt="Explore and Review the Best Restaurants">
+      </div>
+      <section id="hero-msg">
+          <h1 class="title">WELCOME TO</h1>
+          <h1 class="home-title">EATSTAR</h1>
+          <h2>Your Restaurant Reviews & Discovery Hub</h2>
+      </section>
+  </div>
+<main>
     
+</main>
+
+  </div>
+  <footer>
+        <p>Eatstar &copy; 2023 - Danny Kim</p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="image/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="image/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="image/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+  </footer>
 </body>
 </html>
