--- a/sightseeing.html
+++ b/sightseeing.html
@@ -24,14 +24,28 @@
           <img id="hero-img" src="image/sight-banner.png" alt="Explore and Review the Best Restaurants">
       </div>
       <section id="hero-msg">
-          <h1 class="title">WELCOME TO</h1>
-          <h1 class="home-title">EATSTAR</h1>
-          <h2>Your Restaurant Reviews & Discovery Hub</h2>
+          <h1 class="home-title">Sightseeing Adventures</h1>
+          <h2>"Landmark Explorer: Reviews and Discoveries"</h2>
       </section>
   </div>
-<main>
-    
-</main>
+  <main class="home-grid-dining">
+    <section class="banner-one">
+        <img class="card-img" src="image/s1.png" alt="Island-Park">
+        <h2>Located about an hour's drive from Rexburg, Island Park is known for its scenic beauty and outdoor recreation opportunities. Henrys Lake and Island Park Reservoir offer fishing, boating, and other water activities.</h2>
+    </section>
+    <section class="banner-two">
+        <img class="card-img" src="image/s2.png"  alt="yellowstone">
+        <h2>While not directly in Rexburg, Yellowstone is within a reasonable driving distance. It's a world-renowned national park known for its geothermal features, wildlife, and stunning landscapes. Old Faithful, Mammoth Hot Springs, and the Grand Canyon of Yellowstone are some of the must-see attractions.</h2>
+    </section>
+    <section class="banner-three">
+      <img class="card-img" src="image/s3.png" alt="teton">
+      <h2>Another nearby gem, Grand Teton National Park is known for its iconic mountain range, pristine lakes, and abundant wildlife. Hiking, photography, and wildlife viewing are popular activities here.</h2>
+    </section>
+    <section class="banner-four">
+      <img class="card-img" src="image/s4.png" alt="Harriman-State-Park">
+      <h2>This state park, situated near Island Park, provides opportunities for hiking, wildlife viewing, and horseback riding. It's known for its expansive meadows and historical sites.</h2>
+    </section>
+  </main>
 
   </div>
   <footer>
