--- a/sightseeing.html
+++ b/sightseeing.html
@@ -50,7 +50,7 @@
   </div>
   <footer>
         <p>Eatstar &copy; 2023 - Danny Kim</p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="site-plan.html">site-plan</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="image/facebook.png" alt="fb icon">
