--- a/sightseeing.html
+++ b/sightseeing.html
@@ -31,20 +31,20 @@
   <ul class="amount">
     <li>
       <div>
-        <div class="content">dd</div>
-        <div>dd</div>
+        <div class="contents1">Stores</div>
+        <div class="result">100 +</div>
       </div>
     </li>
     <li>
       <div>
-        <div>dd</div>
-        <div>dd</div>
+        <div class="contents1">Reviews</div>
+        <div class="result">100,000 +</div>
       </div>
     </li>
     <li>
       <div>
-        <div>dd</div>
-        <div>dd</div>
+        <div class="contents1">Places</div>
+        <div class="result">100 +</div>
       </div>
     </li>
     
