--- a/sightseeing.html
+++ b/sightseeing.html
@@ -47,26 +47,46 @@
         <div class="result">100 +</div>
       </div>
     </li>
-    
   </ul>
-  <main class="home-grid-dining3">
-    <section class="banner-one3">
-        <img class="card-img" src="image/s1.png" alt="Island-Park">
-        <h2>Located about an hour's drive from Rexburg, Island Park is known for its scenic beauty and outdoor recreation opportunities. Henrys Lake and Island Park Reservoir offer fishing, boating, and other water activities.</h2>
-    </section>
-    <section class="banner-two3">
-        <img class="card-img" src="image/s2.png"  alt="yellowstone">
-        <h2>While not directly in Rexburg, Yellowstone is within a reasonable driving distance. It's a world-renowned national park known for its geothermal features, wildlife, and stunning landscapes. Old Faithful, Mammoth Hot Springs, and the Grand Canyon of Yellowstone are some of the must-see attractions.</h2>
-    </section>
-    <section class="banner-three3">
-      <img class="card-img" src="image/s3.png" alt="teton">
-      <h2>Another nearby gem, Grand Teton National Park is known for its iconic mountain range, pristine lakes, and abundant wildlife. Hiking, photography, and wildlife viewing are popular activities here.</h2>
-    </section>
-    <section class="banner-four3">
-      <img class="card-img" src="image/s4.png" alt="Harriman-State-Park">
-      <h2>This state park, situated near Island Park, provides opportunities for hiking, wildlife viewing, and horseback riding. It's known for its expansive meadows and historical sites.</h2>
-    </section>
+  <main class="home-grid-sight">
+    <div id="background2">
+      <h1>Our Goal</h1>
+      <div class="goal">By keeping track of your review through our webpage,<br>
+        we can make sure that the fun you have can be enjoyed by those who visit after you!</div>
+      <ul class="icons">
+        <li>
+          <div class="card-img1">
+            <img src="image/islandpark.png" alt="islandpark">
+          </div>
+          <div class="contents-title">Island Park</div>
+          <div class="contents1">Located about an hour's drive from Rexburg, Island Park is known for its scenic beauty and outdoor recreation opportunities. Henrys Lake and Island Park Reservoir offer fishing, boating, and other water activities.</div>
+        </li>
+        <li>
+          <div class="card-img1">
+            <img src="image/yellowstone.png" alt="Yellowstone">
+          </div>
+          <div class="contents-title">Yellowstone</div>
+          <div class="contents1">While not directly in Rexburg, Yellowstone is within a reasonable driving distance. It's a world-renowned national park known for its geothermal features, wildlife, and stunning landscapes. Old Faithful, Mammoth Hot Springs, and the Grand Canyon of Yellowstone are some of the must-see attractions.</div>
+        </li>
+        <li>
+          <div class="card-img1">
+            <img src="image/teton.png" alt="teton">
+          </div>
+          <div class="contents-title">Teton National Park</div>
+          <div class="contents1">Another nearby gem, Grand Teton National Park is known for its iconic mountain range, pristine lakes, and abundant wildlife. Hiking, photography, and wildlife viewing are popular activities here</div>
+        </li>
+      </ul>
+      </div>
   </main>
+    <div class="main-content">Explore Great Places</div>
+    <div class="contents1">Share your good memories with others</div>
+
+    <div class="main-image">
+      <img src="image/statepark.png" alt="statepark">
+    </div>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-88d80c8a-291e-4cd4-8e3c-272c5e8352d7" data-elfsight-app-lazy></div>
+  
 
   <footer>
         <p>Eatstar &copy; 2023 - Danny Kim</p>
